# paperless-docling-parser

./: .dockerignore  AGENTS.md  CONTRIBUTING.md  Dockerfile.docling_serve  LICENSE  Makefile  README.md  VERSIONING_MIGRATION_PLAN.md  docker-compose.yaml  event_closed.json  openapi.json  pyproject.toml
.bob/rules-advanced/: AGENTS.md
.bob/rules-ask/: AGENTS.md
.bob/rules-code/: AGENTS.md
.bob/rules-plan/: AGENTS.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: auto-tag.yml  bob-review.yml  build-and-publish.yml  build.yml  create-tag.yml  publish-release.yml  tag-and-release.yml  validate-version-label.yml
scripts/: sync_versions.py
src/paperless_ngx_docling/: __init__.py  _version.py  parsers.py
tests/: README.md  __init__.py  test_converter.py
