# Workspace configuration for paperless-docling-parser monorepo
# This file is NOT used for building packages - each package in packages/ has its own pyproject.toml
# This file only provides workspace-level configuration for development

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.uv.sources]
pgx-docling-parser-core = { path = "packages/core", editable = true }
pgx-docling-parser-local = { path = "packages/local", editable = true }
pgx-docling-parser-serve = { path = "packages/docling_serve", editable = true }

[project]
name = "paperless-docling-parser-workspace"
version = "0.0.0"
description = "Workspace configuration for paperless-docling-parser monorepo"
requires-python = ">=3.10,<3.14"

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "reportlab>=4.0.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "packages/docling_serve",
  "packages/core",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require running docling-serve)",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
